Fixed a couple of issues in the code. Examples section re-written.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/spdep2@106 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/INLABMA/inst/not_a_vignette/biblio.bib
+++ b/INLABMA/inst/not_a_vignette/biblio.bib
@@ -2145,3 +2145,16 @@ S\o{}rbye and H\r{a}vard Rue},
   publisher={CRC Press}
 }
 
+
+@article{LeeMitchell:2013,
+   author={Duncan Lee and Richard Mitchell},
+   title={Locally adaptive spatial smoothing using conditional auto-regressive models},
+   year={2013},
+   journal={Journal of the Royal Statistical Society: Series C (Applied Statistics)},
+   volume ={62},
+   number ={5},
+   pages={}
+}
+
+
+
